Bug fixes (#223)
Why?

Feature:

Work on the address page.
Work on the circular rating.
Work on the pin code check.
This change addresses the need by:

Previously the address page is single column so scroll comes when user fills address. Now we have # converted layout to two column to avoid the scroll.
The circular rating for the review is not looking good enough when user rate comes 100%. So now we have align that centrally.
We have created new component for the pin-code check functionality.
[delivers #159428120]

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,14 +1,17 @@
 @import "../../shared/scss/_selected_theme_variables.scss";
+$break-small: 320px;
 footer {
   height: 50px;
   position: absolute;
   right: 0;
-  bottom: auto;
+  bottom: -60px;
+  @media screen and (min-width: $break-small) and (max-width: 767px) {
+    bottom:auto;
+  }
   left: 0;
   background-color: $gray-10;
   text-align: center;
 }
-
 .quicklinks {
   padding: 2rem 0;
 }
@@ -33,7 +36,7 @@ footer {
   }
 }
 
-$break-small: 320px;
+
 @media screen and (min-width: $break-small) and (max-width: 767px) {
   .quicklinks .row {
     margin: 0px
